--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "babel-preset-react-app": "^3.1.2",
     "enhanced-resolve": "^5.9.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -41,6 +42,7 @@
     "node-sass": "^7.0.1",
     "path": "^0.12.7",
     "sass-loader": "^12.6.0",
+    "scss-loader": "^0.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
